Fix CardType hidden field.

--- a/app/templates/payment.hbs
+++ b/app/templates/payment.hbs
@@ -34,6 +34,8 @@
     <div class="col-row form-footer">
         <button class="btn btn-sm btn-info" data-formsubmit="1">Purchase {{ product.price.text }}</button>
     </div>
+
+    <input type="hidden" data-formField="CardType" value="visa"> <!-- detect -->
 </div>
 
 <script>
